# marks_and_spencer_long_boy

./: .gitignore  CONVENTIONS.md  README.md  app.py  extract.py  main.py  product_details.csv  pyproject.toml
