[project]
name = "ms-trouser-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]
